src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__stmt_fn_nested_fn.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtFn {
    name: outer,
    params: [],
    body: ExprBlock {
        body: [
            StmtFn {
                name: inner,
                params: [],
                body: ExprBlock {
                    body: [],
                    tail: None,
                },
            },
        ],
        tail: None,
    },
}
