src/parser_flat/snapshots/simp__parser_flat__tests__tests__inputs__valid__stmt_let.snap
---
source: src/parser_flat/tests.rs
expression: parse(&input)
---
StmtLet {
    name: v,
    value: ExprInt {
        value: 0,
    },
}
